--- a/css/carbzsos-beta.css
+++ b/css/carbzsos-beta.css
@@ -66,7 +66,7 @@ body{
     
     .decimal{font-size:0.75em;font-weight: bold;}
     
-    .ui-br{border-color:#1f9bc9 !important}
+    .ui-br{border-color:#b0bfd6 !important}
     
     div.ui-input-text, .ui-controlgroup .ui-radio label{
 	    border:1px solid #b0bfd6;
