--- a/css/carbzsos-beta.css
+++ b/css/carbzsos-beta.css
@@ -35,7 +35,7 @@ body{
     .ui-collapsible-heading-toggle.ui-btn-up-b{background-color:#1f9bc9 !important;border-color:#1f87ae !important}
      .ui-collapsible-heading-toggle.ui-btn-hover-b{background-color:#3eb9e5 !important;border-color:#1f87ae !important}
     
-    .ui-btn-hover-b, .ui-btn-up-b{font-weight:100 !important;}
+/*    .ui-btn-hover-b, .ui-btn-up-b{font-weight:100 !important;}*/
     
     .accordian{background:#fff;}
     
@@ -55,34 +55,52 @@ body{
     #calculation_result_text2{
 	    font-weight:bold;
     }
-    
-    div.ui-input-text{
+
+/*Standard input text stlying*/
+.ui-input-text{
 	    width:100% !important;
 	    background:#fff;
 	    -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
     }
+  
+/**make input text boxes large for numeric fields*/
+.numeric-text.ui-input-text {
+        font-size:2em !important;
+        text-align: center;
+    }
     
-    div.ui-input-text input.ui-input-text{}
+
+/*class to make the decimal smaller*/
+.decimal{font-size:0.75em;font-weight: bold;}
     
-    .decimal{font-size:0.75em;font-weight: bold;}
+/*    .ui-br{border-color:#b0bfd6 !important}*/
     
-    .ui-br{border-color:#b0bfd6 !important}
-    
+/*
     div.ui-input-text, .ui-controlgroup .ui-radio label{
 	    border:1px solid #b0bfd6;
     }
+*/
     
+/*
     .ui-controlgroup-vertical .ui-btn.ui-last-child{
 	    border-top:none !important;
     }
+*/
     
     .ui-panel-open{background:#fff }
     .ui-controlgroup-label{color:#fff;}
     #terms .ui-content{background:#fff;}
     
     
+/*
     .ui-btn-up-d,.ui-btn-down-d{background:#a7cb00}
     .ui-btn-hover-d{background:#bcda26}
+*/
     
     table{background: #f3f3f3;padding:5px;}
     table td{padding:3px;}
+
+
+a.input-needs-validation .span.ui-btn-inner{
+    padding:20px !important;
+}
