--- a/css/carbzsos.css
+++ b/css/carbzsos.css
@@ -1,6 +1,7 @@
 body{
             font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
             font-weight: 100 !important;
+            background-color: #1f9bc9;
         }
         
     h1,h2,h3,h4,h5{
