--- a/css/carbzsos.css
+++ b/css/carbzsos.css
@@ -2,6 +2,7 @@ body{
             font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
             font-weight: 100 !important;
             background-color: #1f9bc9;
+            margin:0 !important;
         }
         
     h1,h2,h3,h4,h5{
