--- a/css/carbzsos.css
+++ b/css/carbzsos.css
@@ -1,12 +1,12 @@
 body{
-            font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-            font-weight: 100 !important;
-            background-color: #1f9bc9;
-            margin:0 !important;
-        }
+    font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+    font-weight: 100 !important;
+    background-color: #55b3d6;
+    margin:0 !important;
+}
 
 #container{
-    background-color: #1f9bc9;
+    background-color: #55b3d6;
 }
 
     h1,h2,h3,h4,h5{
@@ -139,6 +139,7 @@ a.input-needs-validation .span.ui-btn-inner{
     padding:20px !important;
 }
 
+/*
 .ui-field-contain .ui-controlgroup-controls {
 width: 100%;
 }
@@ -146,6 +147,7 @@ width: 100%;
 .ui-field-contain, .ui-mobile fieldset.ui-field-contain{
     margin:1em 0;
 }
+*/
 
 .ui-br{
     border-color:#7EBED5;
