--- a/css/carbzsos.css
+++ b/css/carbzsos.css
@@ -1,183 +1,220 @@
-body{
-            font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-            font-weight: 100 !important;
-            background-color: #55b3d6;
-            margin:0 !important;
-        }
-
-#container{
+body {
+    font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-weight: 100 !important;
+    background-color: #55b3d6;
+    margin: 0 !important;
+}
+.ui-body-d,
+.ui-overlay-d,
+.ui-body-c,
+.ui-overlay-c {
     background-color: #55b3d6;
 }
-
-    h1,h2,h3,h4,h5{
-            font-weight:100 !important;
-            color:#ffffff !important;
-            text-shadow: 0px 1px 1px #1f87ae;
-        }   
-    .ui-body-d, .ui-content{
-        color:#fff;
-        text-shadow: 0px 1px 1px #1f87ae;
-    }
-
-#terms .ui-content, #page11 .ui-content, .ui-collapsible-content, .ui-radio .ui-btn-hover-c{color:#000; text-shadow: none;}
-    
-    .ui-panel-content-wrap, .ui-body-c{
-             background:#55b3d6 ;
-        }
-    .logo-padding{
-            padding:20px 0 20px 0;
-        }
-    
-    .ui-bar-b {
-	    background-color: #1f9bc9;
-	    border-color:#1f87ae;
-    }    
-    /*Allow for bigger titles in header*/
-    .ui-header .ui-title, .ui-footer .ui-title {
-    	margin: .6em 15% .8em;
-		color:#fff !important;
-    
-    }
-  
-    /*header button panel color*/ 
-    .ui-header .ui-btn-up-d, .ui-header .ui-btn-left, .ui-header .ui-btn-right{background-color:#1f9bc9 !important;border-color:#1f87ae !important}
-    .ui-header .ui-btn-hover-d {background-color:#3eb9e5 !important;border-color:#1f87ae !important}
-    .ui-header .ui-btn-hover-d .ui-btn-inner{padding:auto !important;}
-    
-    .ui-content .ui-btn-up-d.large .ui-btn-inner, .ui-content .ui-btn-down-d .ui-btn-inner, .ui-content .ui-btn-hover-d .ui-btn-inner{
-        padding: 20px inherit;
-    }
-
-    .ui-btn-up-d.large .ui-btn-inner .ui-btn-text{
-        text-shadow: 0px 1px 1px rgba(0,0,0,0.5) !important;
-    }
-
-.ui-btn-up-d.large{
-    background-color:#91bd09;
+#container {
+    background-color: #55b3d6;
 }
-    
-    .ui-panel-inner{
-        text-shadow:none;
-    }
-
-.LearnMore{
-    margin-top:25px;
+h1,
+h2,
+h3,
+h4,
+h5 {
+    font-weight: 100 !important;
+    color: #ffffff !important;
+    text-shadow: 0px 1px 1px #1f87ae;
+}
+.ui-body-d,
+.ui-content {
+    color: #fff;
+    text-shadow: 0px 1px 1px #1f87ae;
+}
+#terms .ui-content,
+#page11 .ui-content,
+.ui-collapsible-content,
+.ui-radio .ui-btn-hover-c {
+    color: #000;
     text-shadow: none;
 }
-    
-    .ui-collapsible-heading-toggle.ui-btn-up-b{background-color:#1f9bc9 !important;border-color:#1f87ae !important;text-shadow: 0px 1px 1px #1f87ae;}
-     .ui-collapsible-heading-toggle.ui-btn-hover-b{background-color:#3eb9e5 !important;border-color:#1f87ae !important;text-shadow: 0px 1px 1px #1f87ae;}
-    
+.ui-panel-content-wrap,
+.ui-body-c {
+    background: #55b3d6;
+}
+.logo-padding {
+    padding: 20px 0 20px 0;
+}
+.ui-bar-b {
+    background-color: #1f9bc9;
+    border-color: #1f87ae;
+}
+/*Allow for bigger titles in header*/
+
+.ui-header .ui-title,
+.ui-footer .ui-title {
+    margin: .6em 15% .8em;
+    color: #fff !important;
+}
+/*header button panel color*/
+
+.ui-header .ui-btn-up-d,
+.ui-header .ui-btn-left,
+.ui-header .ui-btn-right {
+    background-color: #1f9bc9 !important;
+    border-color: #1f87ae !important
+}
+.ui-header .ui-btn-hover-d {
+    background-color: #3eb9e5 !important;
+    border-color: #1f87ae !important
+}
+.ui-header .ui-btn-hover-d .ui-btn-inner {
+    padding: auto !important;
+}
+.ui-content .ui-btn-up-d.large .ui-btn-inner,
+.ui-content .ui-btn-down-d .ui-btn-inner,
+.ui-content .ui-btn-hover-d .ui-btn-inner {
+    padding: 20px inherit;
+}
+.ui-btn-up-d.large .ui-btn-inner .ui-btn-text {
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5) !important;
+}
+.ui-btn-up-d.large {
+    background-color: #91bd09;
+}
+.ui-panel-inner {
+    text-shadow: none;
+}
+.LearnMore {
+    margin-top: 25px;
+    text-shadow: none;
+}
+.ui-collapsible-heading-toggle.ui-btn-up-b {
+    background-color: #1f9bc9 !important;
+    border-color: #1f87ae !important;
+    text-shadow: 0px 1px 1px #1f87ae;
+}
+.ui-collapsible-heading-toggle.ui-btn-hover-b {
+    background-color: #3eb9e5 !important;
+    border-color: #1f87ae !important;
+    text-shadow: 0px 1px 1px #1f87ae;
+}
 /*    .ui-btn-hover-b, .ui-btn-up-b{font-weight:100 !important;}*/
-    
-    .accordian{background:#fff;}
-    
-    #calculation_result_text{
-	    background: #a7cb00;
-		font-size:4em;
-		color:#fff;
-		padding:30px 0px 30px 0px;
-		font-weight:bold;
-		-moz-border-radius: 10px;
-		-webkit-border-radius: 10px;
-		border-radius: 10px;
-		border-top: 2px solid #fff;
-		border-color:rgba(255,255,255,.2);
-    }
-    
-    #calculation_result_text2{
-	    font-weight:bold;
-    }
 
+.accordian {
+    background: #fff;
+}
+#calculation_result_text {
+    background: #a7cb00;
+    font-size: 4em;
+    color: #fff;
+    padding: 30px 0px 30px 0px;
+    font-weight: bold;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    border-top: 2px solid #fff;
+    border-color: rgba(255, 255, 255, .2);
+}
+#calculation_result_text2 {
+    font-weight: bold;
+}
 /*Standard input text stlying*/
-.ui-input-text{
-	    width:100% !important;
-	    background:#fff;
-	    -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
-        border-color:#2c89ba;
-    }
-  
-/**make input text boxes large for numeric fields*/
-.numeric-text.ui-input-text {
-        font-size:2em !important;
-        text-align: center;
-    }
-    
 
+.ui-input-text {
+    width: 100% !important;
+    background: #fff;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    border-color: #2c89ba;
+}
+/**make input text boxes large for numeric fields*/
+
+.numeric-text.ui-input-text {
+    font-size: 2em !important;
+    text-align: center;
+}
 /*class to make the decimal smaller*/
-.decimal{font-size:0.75em;font-weight: bold;}
-    
+
+.decimal {
+    font-size: 0.75em;
+    font-weight: bold;
+}
 /*    .ui-br{border-color:#b0bfd6 !important}*/
-    
+
 /*
     div.ui-input-text, .ui-controlgroup .ui-radio label{
 	    border:1px solid #b0bfd6;
     }
 */
-    
+
 /*
     .ui-controlgroup-vertical .ui-btn.ui-last-child{
 	    border-top:none !important;
     }
 */
-    
-    .ui-panel-open{background:#fff }
-    .ui-controlgroup-label{color:#fff;}
-    #terms .ui-content{background:#fff;}
-    
-    
+
+.ui-panel-open {
+    background: #fff
+}
+.ui-controlgroup-label {
+    color: #fff;
+}
+#terms .ui-content {
+    background: #fff;
+}
 /*
     .ui-btn-up-d,.ui-btn-down-d{background:#a7cb00}
     .ui-btn-hover-d{background:#bcda26}
 */
-    
-    table{background: #f3f3f3;padding:5px;}
-    table td{padding:3px;}
 
-
-a.input-needs-validation .span.ui-btn-inner{
-    padding:20px !important;
+table {
+    background: #f3f3f3;
+    padding: 5px;
 }
-
+table td {
+    padding: 3px;
+}
+a.input-needs-validation .span.ui-btn-inner {
+    padding: 20px !important;
+}
 .ui-field-contain .ui-controlgroup-controls {
-width: 100%;
+    width: 100%;
 }
-
-.ui-field-contain, .ui-mobile fieldset.ui-field-contain{
-    margin:1em 0;
+.ui-field-contain,
+.ui-mobile fieldset.ui-field-contain {
+    margin: 1em 0;
 }
-
-.ui-br{
-    border-color:#7EBED5;
+.ui-br {
+    border-color: #7EBED5;
 }
-
 .ui-shadow-inset {
--moz-box-shadow: inset 0 1px 10px rgba(0,0,0,.);
--webkit-box-shadow: inset 0 1px 10px rgba(0,0,0,.3);
-box-shadow: inset 0 1px 10px rgba(0,0,0,0.3);
-/* background: #FFF; */
+    -moz-box-shadow: inset 0 1px 10px rgba(0, 0, 0, .);
+    -webkit-box-shadow: inset 0 1px 10px rgba(0, 0, 0, .3);
+    box-shadow: inset 0 1px 10px rgba(0, 0, 0, 0.3);
+    /* background: #FFF; */
 }
-
-
-.ui-radio .ui-btn-up-c{
+.ui-radio .ui-btn-up-c {
     text-shadow: none;
 }
-
-
 @-webkit-keyframes Glowing {
-  from { background-color: #b5ea11  ; -webkit-box-shadow: 0 0 9px #91bd09; }
-  50% { background-color: #91bd09; -webkit-box-shadow: 0 0 18px #b5ea11 ; }
-  to { background-color: #b5ea11  ; -webkit-box-shadow: 0 0 9px #91bd09; }
+    from {
+        background-color: #b5ea11;
+        -webkit-box-shadow: 0 0 9px #91bd09;
+    }
+    50% {
+        background-color: #91bd09;
+        -webkit-box-shadow: 0 0 18px #b5ea11;
+    }
+    to {
+        background-color: #b5ea11;
+        -webkit-box-shadow: 0 0 9px #91bd09;
+    }
 }
-
 a.Glowing {
-  -webkit-animation-name: Glowing;
-  -webkit-animation-duration: 2s;
-  -webkit-animation-iteration-count: infinite;
+    -webkit-animation-name: Glowing;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
 }
-
-
 /*UI Hacks*/
+
 /*
 .ui-header .ui-title{
     min-height: 1.4em;
